// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hcm-policies #getStatus Should return critical compliant status 1`] = `
<StatusField
  status="critical"
/>
`;

exports[`hcm-policies #getStatus Should return critical status 1`] = `
<StatusField
  status="critical"
  text="not compliant"
/>
`;

exports[`hcm-policies #getStatus Should return healthy compliant status 1`] = `
<StatusField
  status="ok"
  text="compliant"
/>
`;

exports[`hcm-policies #getStatus Should return healthy status 1`] = `
<StatusField
  status="ok"
  text="compliant"
/>
`;

exports[`hcm-policies - createPolicyLink Should return empty Link obj 1`] = `
<Link
  to="undefined/local/"
>
  {}
</Link>
`;

exports[`hcm-policies - createPolicyLink Should return item name 1`] = `"TestPolicyName"`;

exports[`hcm-policies - createPolicyLink Should return vaild Link obj 1`] = `
<Link
  to="undefined/local/TestPolicyNamespace/TestPolicyName"
>
  TestPolicyName
</Link>
`;
